--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@types/socket.io": "^3.0.1",
+    "@types/twilio": "^3.19.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -37,6 +39,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.3",
+    "twilio": "^5.11.2",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
@@ -61,4 +65,3 @@
     "typescript": "^5.3.3"
   }
 }
-
