--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,19 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "turn:setup": "./scripts/setup-turn-server.sh",
+    "turn:test": "./scripts/test-turn-server.sh",
+    "turn:stop": "./scripts/stop-turn-server.sh",
+    "turn:logs": "docker logs -f vox-turn-server",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:logs": "docker compose logs -f",
+    "docker:build": "docker compose build",
+    "docker:dev": "docker compose -f docker-compose.dev.yml up -d",
+    "docker:dev:down": "docker compose -f docker-compose.dev.yml down",
+    "docker:migrate": "docker compose exec backend npx prisma migrate deploy",
+    "docker:studio": "docker compose exec backend npx prisma studio"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -30,7 +42,6 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "@types/socket.io": "^3.0.1",
-    "@types/twilio": "^3.19.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -40,7 +51,6 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.3",
-    "twilio": "^5.11.2",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
