--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   # PostgreSQL Database
   postgres:
@@ -14,7 +12,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "${POSTGRES_PORT:-5435}:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-vox_user}"]
       interval: 10s
@@ -36,7 +34,7 @@ services:
     ports:
       - "${TURN_PORT:-3478}:3478/udp"
       - "${TURN_PORT:-3478}:3478/tcp"
-      - "49152-65535:49152-65535/udp" # RTP port range
+      - "49152-49200:49152-49200/udp" # RTP port range (reduced to avoid conflicts)
     networks:
       - vox-network
     healthcheck:
@@ -52,15 +50,31 @@ services:
     image: redis:7-alpine
     container_name: vox-redis
     restart: unless-stopped
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-}
+    command: >
+      sh -c "
+        if [ -n \"$${REDIS_PASSWORD}\" ]; then
+          redis-server --appendonly yes --requirepass \"$${REDIS_PASSWORD}\"
+        else
+          redis-server --appendonly yes
+        fi
+      "
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
     volumes:
       - redis_data:/data
     ports:
-      - "${REDIS_PORT:-6379}:6379"
+      - "${REDIS_PORT:-6380}:6379"
     networks:
       - vox-network
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: >
+        sh -c "
+          if [ -n \"$${REDIS_PASSWORD}\" ]; then
+            redis-cli -a \"$${REDIS_PASSWORD}\" ping
+          else
+            redis-cli ping
+          fi
+        "
       interval: 10s
       timeout: 5s
       retries: 5
@@ -103,7 +117,7 @@ services:
       RATE_LIMIT_MAX_REQUESTS: ${RATE_LIMIT_MAX_REQUESTS:-100}
 
       # Redis
-      REDIS_URL: redis://redis:6379
+      REDIS_URL: ${REDIS_PASSWORD:+redis://:${REDIS_PASSWORD}@redis:6379}${REDIS_PASSWORD:-redis://redis:6379}
 
       # WebRTC/TURN
       TURN_SERVER_URL: ${TURN_SERVER_URL:-turn:turn:3478}
