--- a/backend/turnserver.conf
+++ b/backend/turnserver.conf
@@ -25,7 +25,8 @@ user=testuser:testpass123
 
 # Logging
 verbose
-log-file=/var/log/turnserver.log
+# Log to stdout (captured by Docker)
+# log-file=/var/log/turnserver.log
 
 # Security
 # For production, use proper certificates
@@ -46,7 +47,8 @@ fingerprint
 
 # For testing: allow all origins
 no-cli
-no-stdout-log
+# Log to stdout (Docker will capture this)
+# no-stdout-log
 
 # Performance
 total-quota=100
