--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,10 +14,15 @@ services:
     ports:
       - "${POSTGRES_PORT:-5435}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-vox_user}"]
-      interval: 10s
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${POSTGRES_USER:-vox_user} -d ${POSTGRES_DB:-vox_db}",
+        ]
+      interval: 5s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 20s
     networks:
       - vox-network
 
@@ -28,7 +33,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./turnserver.conf:/etc/turnserver.conf:ro
-    command: turnserver
+    command: turnserver -c /etc/turnserver.conf
     environment:
       - TZ=UTC
     ports:
@@ -52,8 +57,8 @@ services:
     restart: unless-stopped
     command: >
       sh -c "
-        if [ -n \"$${REDIS_PASSWORD}\" ]; then
-          redis-server --appendonly yes --requirepass \"$${REDIS_PASSWORD}\"
+        if [ -n \"$$REDIS_PASSWORD\" ]; then
+          redis-server --appendonly yes --requirepass \"$$REDIS_PASSWORD\"
         else
           redis-server --appendonly yes
         fi
@@ -69,8 +74,8 @@ services:
     healthcheck:
       test: >
         sh -c "
-          if [ -n \"$${REDIS_PASSWORD}\" ]; then
-            redis-cli -a \"$${REDIS_PASSWORD}\" ping
+          if [ -n \"$$REDIS_PASSWORD\" ]; then
+            redis-cli -a \"$$REDIS_PASSWORD\" ping
           else
             redis-cli ping
           fi
@@ -89,7 +94,7 @@ services:
     environment:
       # Server
       NODE_ENV: ${NODE_ENV:-production}
-      PORT: ${PORT:-3000}
+      PORT: 3000
       API_VERSION: ${API_VERSION:-v1}
 
       # Database
@@ -116,8 +121,9 @@ services:
       RATE_LIMIT_WINDOW_MS: ${RATE_LIMIT_WINDOW_MS:-60000}
       RATE_LIMIT_MAX_REQUESTS: ${RATE_LIMIT_MAX_REQUESTS:-100}
 
-      # Redis
-      REDIS_URL: ${REDIS_PASSWORD:+redis://:${REDIS_PASSWORD}@redis:6379}${REDIS_PASSWORD:-redis://redis:6379}
+      # Redis (set REDIS_URL explicitly if REDIS_PASSWORD is used)
+      REDIS_URL: ${REDIS_URL:-redis://redis:6379}
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-}
 
       # WebRTC/TURN
       TURN_SERVER_URL: ${TURN_SERVER_URL:-turn:turn:3478}
@@ -126,12 +132,14 @@ services:
     command: >
       sh -c "
         echo 'Waiting for database...' &&
-        npx prisma migrate deploy &&
+        sleep 10 &&
+        echo 'Running migrations...' &&
+        npx prisma migrate deploy || (echo 'Migration failed, retrying...' && sleep 5 && npx prisma migrate deploy) &&
         echo 'Starting server...' &&
         node dist/server.js
       "
     ports:
-      - "${PORT:-3000}:3000"
+      - "3000:3000"
     volumes:
       - ./uploads:/app/uploads
       - ./logs:/app/logs
