Update .gitignore, Docker configurations, and enhance API routes with Swagger documentation
- Expanded `.gitignore` to include additional files and directories for mobile app development, Node.js, and environment variables.
- Updated `docker-compose.dev.yml` and `docker-compose.yml` to streamline service startup with a new entrypoint script.
- Modified `Dockerfile` and `Dockerfile.dev` to ensure the entrypoint script is executable.
- Enhanced `seed.ts` to include password hashing and seeding of test users with different roles.
- Added Swagger documentation for new authentication and profile routes, including password reset and call management functionalities.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -44,10 +44,13 @@ COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/prisma ./prisma
 # Copy source files for Swagger documentation (swagger-jsdoc needs source files with JSDoc comments)
 COPY --from=builder /app/src ./src
+# Copy scripts directory
+COPY --from=builder /app/scripts ./scripts
 
 # Create directories for uploads and logs
 RUN mkdir -p uploads/profiles uploads/kyc uploads/voice-bios uploads/events uploads/messages && \
     mkdir -p logs && \
+    chmod +x /app/scripts/docker-entrypoint.sh && \
     chown -R nodejs:nodejs /app
 
 USER nodejs
