Enhance group messaging functionality and update Docker configurations
- Added group messaging capabilities, including endpoints to send and retrieve messages for group members.
- Introduced new GroupMessage model in the Prisma schema to support group messaging features.
- Updated .dockerignore to exclude unnecessary scripts from the container.
- Enhanced seed script to include profile data for seeded users, improving test coverage for group functionalities.

--- a/mob-app/app.json
+++ b/mob-app/app.json
@@ -42,6 +42,11 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "90241100-4b23-438d-9cdb-e3ef600238e5"
+      }
     }
   }
 }
