--- a/mob-app/package.json
+++ b/mob-app/package.json
@@ -3,14 +3,17 @@
   "main": "index.js",
   "version": "1.0.0",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build:android": "eas build --platform android --profile preview",
-    "build:android:prod": "eas build --platform android --profile production"
+    "build:android": "bash scripts/build-android.sh",
+    "build:android:prod": "eas build --platform android --profile production --clear-cache",
+    "build:android:local": "eas build --platform android --profile preview --local",
+    "build:android:prod:local": "eas build --platform android --profile production --local"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -24,6 +27,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.32",
     "expo-av": "^16.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.13",
     "expo-document-picker": "^14.0.8",
     "expo-font": "~14.0.11",
@@ -59,6 +63,7 @@
   "devDependencies": {
     "@types/react": "~19.1.0",
     "eas-cli": "^16.0.0",
+    "patch-package": "^8.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
