--- a/mob-app/app.json
+++ b/mob-app/app.json
@@ -18,6 +18,7 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
+      "usesCleartextTraffic": true,
       "package": "com.domambia.mobapp"
     },
     "web": {
