--- a/liamapp/pubspec.yaml
+++ b/liamapp/pubspec.yaml
@@ -81,6 +81,8 @@ flutter_launcher_icons:
   android: true
   ios: true
   image_path: assets/logo.png
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
